--- a/style.css
+++ b/style.css
@@ -1,4 +1,52 @@
 body{
-    align-content: center;
-    background-color: aquamarine;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+
+    padding-top: 0;
+    padding-left: 0;
+    padding-right: 0;
 }
+
+nav{
+    margin-left: 0%;
+    margin-top: 0;
+    border-style: none;
+    /*border-radius: 5px;*/
+    /*align-content:;*/
+    background-color: rgba(120, 120, 120, 0.695);
+
+}
+
+
+#nav-bar{
+    margin-top: 0;
+    
+}
+
+#nav{
+    margin-top: 0;
+    margin-left: 75%; 
+    margin-right: auto;
+}
+
+#home{
+    background-color: rgba(120, 120, 120, 0.695);
+    text-align: center;
+}
+
+#projects{
+    background-color: rgba(120, 120, 120, 0.695);
+    text-align: center;
+}
+
+#about{
+    background-color: rgba(120, 120, 120, 0.695);
+    text-align: center;
+}
+
+#contact{
+    background-color: rgba(120, 120, 120, 0.695);
+    text-align: center;
+}
+
