--- a/style.css
+++ b/style.css
@@ -13,21 +13,23 @@ body{
     list-style-type: none;
     margin: 0;
     padding: 0;
-    background-color: #f1f1f1;
+    background-color: #333;
 
-    position: fixed;
-    width: 25%;
-    height: 100%;
-    overflow: auto;
+    position: sticky;
 
+    overflow: hidden;
     top: 0;
+}
+.navbar li{
+    float: left;
 }
 
 .navbar li a {
     display: block;
-    color: #000;
-    padding: 8px 16px;
+    color: white;
+    padding: 14px 16px;
     text-decoration: none;
+    text-align: center;
 }
 
 .navbar li a.active {
@@ -36,13 +38,13 @@ body{
 }
 
 .navbar li a:hover:not(.active) {
-    background-color: #555;
+    background-color: #111;
     color: white;
 }
 
 
 .home{
-    margin-left: 25%;
+    margin-left: auto;
     background-color: rgba(120, 120, 120, 0.695);
     text-align: center;
 }
